# race-practice

./: CMakeLists.txt  README.md  main.cpp
app/: GameApp.cpp  GameApp.h  InputMapper.cpp  InputMapper.h  Time.cpp  Time.h
domain/car/: Car.h  LapeTimer.h  Physics.h
domain/track/: Track.cpp  Track.h
domain/types/: MathTypes.cpp  MathTypes.h
infrastructure/: GIRenderer2D.cpp  GIRenderer2D.h  GIWindow.cpp  GIWindow.h  GlRenderer2D.cpp  GlRenderer2D.h  GlWindow.cpp  GlWindow.h  Texture.cpp  Texture.h
ui/: Hud.cpp  Hud.h  Scene2D.cpp  Scene2D.h
